finished welcome section

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="Description" content="Food recipe searching website">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" \
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Courgette&Raleway&display=swap" rel="stylesheet">
     <!-- <script src="https://developer.edamam.com/attribution/badge.js"></script> -->
     <link rel="stylesheet" href="css/style.css">
     </link>
@@ -15,34 +16,75 @@
 </head>
 
 <body>
-    <div class="welcome">
+    <header>
         <div class="container">
-            <div class="row justify-content-md-end">
-                <div class="col-md-6 col-sm-12">
-                    <nav class="nav-wrap">
+            <div class="row">
+                <div class="col">
+                    <h3 class="title">Awesome <span>Foods</span> </h3>
+                </div>
+                <div class="col nav-wrap">
+
+                    <nav>
                         <ul>
-                            <li><a href="#" class="link">Home</a></li>
-                            <li><a href="#" class="link">Search</a></li>
-                            <li><a href="#" class="link">Contact</a></li>
+                            <li><a href="#">home</a></li>
+                            <li><a href="#">recipes</a></li>
+                            <li><a href="#">search</a></li>
                         </ul>
                     </nav>
                 </div>
             </div>
-            <div class="row justify-content-md-end">
-                <div class="col-md-6 col-sm-12">
+        </div>
+    </header>
+    <div class="welcome">
+        <div class="background"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col hero-wrap">
                     <div class="hero">
-                        <div class="logo">
-                            <img src="./images/logo.png" alt="chef hat logo">
-                        </div>
+                        <p>welcome to awesome foods</p>
                         <div class="text">
-                            <h3>Where's The Munchies</h3>
-                            <p>Food recipe search website.</p>
+                            <h1>an
+                                <span>awesome</span>
+                            </h1>
+                            <h1>food experience</h1>
                         </div>
-
+                        <button class="btn btn-outline">recipes</button>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="dessert-section">
+
+        <div class="top">
+            <div class="top-wrap">
+                <div class="dessert-text">
+                    <p>Finish your evening in style with a delicious chocolate or fruit, rich or light dessert.</p>
+                    <p>Thousands of dessert recipes to choose from, biscuits, cakes, puddings and awesomeness.</p>
+                </div>
+                <div class="dessert-img">
+                    <img src="./images/cheese-cake.png" alt="dessert image">
+                </div>
+            </div>
+
+        </div>
+
+        
+
+        <div class="desserts">
+            <div class="container">
+                <div class="row">
+                    <div class="col"></div>
+                </div>
+                <div class="row">
+                    <div class="col"></div>
+                </div>
+                <div class="row">
+                    <div class="col"></div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 
