--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             </h1>
                             <h1>food experience</h1>
                         </div>
-                        <button class="btn btn-outline">recipes</button>
+                        <button class="button">recipes</button>
                     </div>
                 </div>
             </div>
