--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </h1>
                         <h1>food experience</h1>
                     </div>
-                    <button class="button">recipes</button>
+                    <a href="#recipes"><button class="button">recipes</button></a>
                 </div>
 
             </div>
@@ -81,19 +81,19 @@
                 <button class="button">Search Desserts</button>
                 <div class="card-wrap">
                     <div class="card">
-                        <div class="img-one"></div>
+                        <div class="img-one card-img"></div>
                         <p>cheese cake</p>
                     </div>
                     <div class="card">
-                        <div class="img-two"></div>
+                        <div class="img-two card-img"></div>
                         <p>doughnuts</p>
                     </div>
                     <div class="card">
-                        <div class="img-three"></div>
+                        <div class="img-three card-img"></div>
                         <p>flapjacks</p>
                     </div>
                     <div class="card">
-                        <div class="img-four"></div>
+                        <div class="img-four card-img"></div>
                         <p>cupcakes</p>
                     </div>
                 </div>
@@ -110,20 +110,20 @@
                 <button class="button">Search Meals</button>
                 <div class="card-wrap">
                     <div class="card">
-                        <div class="img-one"></div>
-                        <p>cheese cake</p>
+                        <div class="img-five card-img"></div>
+                        <p>fish</p>
                     </div>
                     <div class="card">
-                        <div class="img-two"></div>
-                        <p>doughnuts</p>
+                        <div class="img-six card-img"></div>
+                        <p>pork</p>
                     </div>
                     <div class="card">
-                        <div class="img-three"></div>
-                        <p>flapjacks</p>
+                        <div class="img-seven card-img"></div>
+                        <p>beef</p>
                     </div>
                     <div class="card">
-                        <div class="img-four"></div>
-                        <p>cupcakes</p>
+                        <div class="img-eight card-img"></div>
+                        <p>chicken</p>
                     </div>
                 </div>
             </div>
@@ -138,20 +138,20 @@
                     <button class="button">Search Breakfasts</button>
                     <div class="card-wrap">
                         <div class="card">
-                            <div class="img-one"></div>
-                            <p>cheese cake</p>
+                            <div class="img-nine card-img"></div>
+                            <p>omlette</p>
                         </div>
                         <div class="card">
-                            <div class="img-two"></div>
-                            <p>doughnuts</p>
+                            <div class="img-ten card-img"></div>
+                            <p>waffles</p>
                         </div>
                         <div class="card">
-                            <div class="img-three"></div>
-                            <p>flapjacks</p>
+                            <div class="img-eleven card-img"></div>
+                            <p>pancakes</p>
                         </div>
                         <div class="card">
-                            <div class="img-four"></div>
-                            <p>cupcakes</p>
+                            <div class="img-twelve card-img"></div>
+                            <p>smoothies</p>
                         </div>
                     </div>
                 </div>
