--- a/index.html
+++ b/index.html
@@ -185,24 +185,36 @@
 
                 <div class="options-bar">
                     <ul id="main">
-                        <li>Cuisine type
+                        <li class="drop-btns">
+                            <span class="title">Cuisine type</span>
                             <ul class="drop">
-                                <div class="cuisine-list"> </div>
+                                <div>
+                                    <ul class="cuisine-list"></ul>
+                                </div>
                             </ul>
                         </li>
-                        <li>meal type
+                        <li class="drop-btns">
+                            <span class="title">meal type</span>
                             <ul class="drop">
-                                <div class="meal-list"></div>
+                                <div>
+                                    <ul class="meal-list"></ul>
+                                </div>
                             </ul>
                         </li>
-                        <li>dish type
+                        <li class="drop-btns">
+                            <span class="title">dish type</span>
                             <ul class="drop">
-                                <div class="dish-list"></div>
+                                <div>
+                                    <ul class="dish-list"></ul>
+                                </div>
                             </ul>
                         </li>
-                        <li>diet
+                        <li class="drop-btns">
+                            <span class="title">diet</span>
                             <ul class="drop">
-                                <div class="diet-list"></div>
+                                <div>
+                                    <ul class="diet-list"></ul>
+                                </div>
                             </ul>
                         </li>
                         <div id="marker"></div>
