finished card links and api data

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         <li><a href="#home">home</a></li>
                         <li><a href="#recipes">recipes</a></li>
                         <li><a href="#search">search</a></li>
+                        <!-- <div class="nav-marker"></div> -->
                     </ul>
                 </nav>
             </div>
@@ -79,7 +80,7 @@
                     <h2>Dessert Recipes.</h2>
                     <p>Search thousands of yummy dessert recipes.</p>
                 </div>
-                <button class="button">Search Desserts</button>
+                <button class="button" >Search Desserts</button>
                 <div class="card-wrap">
                     <div class="card">
                         <div class="img-one card-img"></div>
@@ -87,15 +88,15 @@
                     </div>
                     <div class="card">
                         <div class="img-two card-img"></div>
-                        <p>doughnuts</p>
+                        <p>doughnut</p>
                     </div>
                     <div class="card">
                         <div class="img-three card-img"></div>
-                        <p>flapjacks</p>
+                        <p>flapjack</p>
                     </div>
                     <div class="card">
                         <div class="img-four card-img"></div>
-                        <p>cupcakes</p>
+                        <p>cupcake</p>
                     </div>
                 </div>
 
@@ -152,7 +153,7 @@
                     </div>
                     <div class="card">
                         <div class="img-twelve card-img"></div>
-                        <p>smoothies</p>
+                        <p>smoothie</p>
                     </div>
 
                 </div>
@@ -173,12 +174,12 @@
                     </div>
 
                     <div class="searchbar">
-                        <div class="search">
+                        <form class="search">
                             <input type="text" class="searchTerm" placeholder="What would you like to eat?">
                             <button type="submit" class="searchButton">
                                 <i class="fa fa-search"></i>
                             </button>
-                        </div>
+                        </form>
                     </div>
                 </div>
 
@@ -225,6 +226,8 @@
 
         </div>
     </section>
+    <section id="results" class="results-section"></section>
+    <footer></footer>
 
 
 
