--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="loader-wrapper">
             <h1 class="title">Awesome <span>Recipes</span> </h1>
 
-           <span class="loader"><span class="loader-inner"></span></span>
+            <span class="loader"><span class="loader-inner"></span></span>
         </div>
-        
+
     </div>
 
     <header>
@@ -82,7 +82,7 @@
 
     <section class="recipe-section">
 
-            <!-- <a href="#results">
+        <!-- <a href="#results">
                     <div class="img-one card-img"></div>
                     </a> -->
 
@@ -95,19 +95,27 @@
                 <button class="button" aria-label="search desserts">Search Desserts</button>
                 <div class="card-wrap">
                     <div class="card">
-                        <div class="img-one card-img"></div>
+                        <a href="#results" aria-label="scroll to results">
+                            <div class="img-one card-img"></div>
+                        </a>
                         <p>cheese cake</p>
                     </div>
                     <div class="card">
-                        <div class="img-two card-img"></div>
+                        <a href="#results" aria-label="scroll to results">
+                            <div class="img-two card-img"></div>
+                        </a>
                         <p>doughnut</p>
                     </div>
                     <div class="card">
-                        <div class="img-three card-img"></div>
+                        <a href="#results" aria-label="scroll to results">
+                            <div class="img-three card-img"></div>
+                        </a>
                         <p>flapjack</p>
                     </div>
                     <div class="card">
-                        <div class="img-four card-img"></div>
+                        <a href="#results" aria-label="scroll to results">
+                            <div class="img-four card-img"></div>
+                        </a>
                         <p>cupcake</p>
                     </div>
                 </div>
@@ -124,19 +132,27 @@
                 <button class="button" aria-label="search meals">Search Meals</button>
                 <div class="card-wrap">
                     <div class="card">
-                        <div class="img-five card-img"></div>
+                        <a href="#results" aria-label="scroll to results">
+                            <div class="img-five card-img"></div>
+                        </a>
                         <p>fish</p>
                     </div>
                     <div class="card">
-                        <div class="img-six card-img"></div>
+                        <a href="#results" aria-label="scroll to results">
+                            <div class="img-six card-img"></div>
+                        </a>
                         <p>pork</p>
                     </div>
                     <div class="card">
-                        <div class="img-seven card-img"></div>
+                        <a href="#results" aria-label="scroll to results">
+                            <div class="img-seven card-img"></div>
+                        </a>
                         <p>beef</p>
                     </div>
                     <div class="card">
-                        <div class="img-eight card-img"></div>
+                        <a href="#results" aria-label="scroll to results">
+                            <div class="img-eight card-img"></div>
+                        </a>
                         <p>chicken</p>
                     </div>
                 </div>
@@ -152,19 +168,27 @@
                 <button class="button" aria-label="search breakfast">Search Breakfasts</button>
                 <div class="card-wrap">
                     <div class="card">
-                        <div class="img-nine card-img"></div>
+                        <a href="#results" aria-label="scroll to results">
+                            <div class="img-nine card-img"></div>
+                        </a>
                         <p>omlette</p>
                     </div>
                     <div class="card">
-                        <div class="img-ten card-img"></div>
+                        <a href="#results" aria-label="scroll to results">
+                            <div class="img-ten card-img"></div>
+                        </a>
                         <p>waffles</p>
                     </div>
                     <div class="card">
-                        <div class="img-eleven card-img"></div>
+                        <a href="#results" aria-label="scroll to results">
+                            <div class="img-eleven card-img"></div>
+                        </a>
                         <p>pancakes</p>
                     </div>
                     <div class="card">
-                        <div class="img-twelve card-img"></div>
+                        <a href="#results" aria-label="scroll to results">
+                            <div class="img-twelve card-img"></div>
+                        </a>
                         <p>smoothie</p>
                     </div>
 
@@ -187,7 +211,8 @@
 
                     <div class="searchbar">
                         <form class="search">
-                            <input type="text" class="searchTerm" aria-label="search for recipes" placeholder="What would you like to eat?">
+                            <input type="text" class="searchTerm" aria-label="search for recipes"
+                                placeholder="What would you like to eat?">
                             <button type="submit" class="searchButton" aria-label="search button">
                                 <i class="fa fa-search"></i>
                             </button>
@@ -239,8 +264,125 @@
         </div>
     </section>
     <section id="results" class="results-section">
-        <div class="resultCards-wrap">
+        <div class="result-cards-wrap">
+            <!-- <div class="card">
+                <div class="cover"></div>
+                <div class="wrap">
+                    <div class="text">
+                        <h2>title</h2>
+                        <h4>sub title</h4>
+                    </div>
+                    <div class="btn-wrap">
+                            <div class="btn">
+                                <i class="fas fa-info"></i>
+                            </div>
+                        </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="cover"></div>
+                <div class="wrap">
+                    <div class="text">
+                        <h2>title</h2>
+                        <h4>sub title</h4>
+                    </div>
+                    <div class="btn-wrap">
+                        <div class="btn">
+                            <i class="fas fa-info"></i>
+                        </div>
+                    </div>
 
+                </div>
+            </div>
+            <div class="card">
+                <div class="cover"></div>
+                <div class="wrap">
+                    <div class="text">
+                        <h2>title</h2>
+                        <h4>sub title</h4>
+                    </div>
+                    <div class="btn-wrap">
+                        <div class="btn">
+                            <i class="fas fa-info"></i>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="card">
+                <div class="cover"></div>
+                <div class="wrap">
+                    <div class="text">
+                        <h2>title</h2>
+                        <h4>sub title</h4>
+                    </div>
+                    <div class="btn-wrap">
+                        <div class="btn">
+                            <i class="fas fa-info"></i>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="card">
+                <div class="cover"></div>
+                <div class="wrap">
+                    <div class="text">
+                        <h2>title</h2>
+                        <h4>sub title</h4>
+                    </div>
+                    <div class="btn-wrap">
+                        <div class="btn">
+                            <i class="fas fa-info"></i>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="card">
+                <div class="cover"></div>
+                <div class="wrap">
+                    <div class="text">
+                        <h2>title</h2>
+                        <h4>sub title</h4>
+                    </div>
+                    <div class="btn-wrap">
+                        <div class="btn">
+                            <i class="fas fa-info"></i>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="card">
+                <div class="cover"></div>
+                <div class="wrap">
+                    <div class="text">
+                        <h2>title</h2>
+                        <h4>sub title</h4>
+                    </div>
+                    <div class="btn-wrap">
+                        <div class="btn">
+                            <i class="fas fa-info"></i>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="card">
+                <div class="cover"></div>
+                <div class="wrap">
+                    <div class="text">
+                        <h2>title</h2>
+                        <h4>sub title</h4>
+                    </div>
+                    <div class="btn-wrap">
+                        <div class="btn">
+                            <i class="fas fa-info"></i>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
         </div>
     </section>
     <footer></footer>
