--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <a href="#results" aria-label="scroll to results">
                             <div class="img-three card-img"></div>
                         </a>
-                        <p>flapjack</p>
+                        <p>flapjacks</p>
                     </div>
                     <div class="card">
                         <a href="#results" aria-label="scroll to results">
