made responsive and all buttons work

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="dessert-text">
                     <p>Finish your evening in style with a delicious chocolate or fruit, rich or light dessert.</p>
                     <p>Thousands of dessert recipes to choose from, biscuits, cakes, puddings and awesomeness.</p>
-                    <button class="button">desserts</button>
+                    <button class="button searching-btns">desserts</button>
                 </div>
 
                 <div class="dessert-img">
@@ -92,30 +92,22 @@
                     <h2>Dessert Recipes.</h2>
                     <p>Search thousands of yummy dessert recipes.</p>
                 </div>
-                <button class="button" aria-label="search desserts">Search Desserts</button>
+                <button class="button searching-btns" aria-label="search desserts">Search Desserts</button>
                 <div class="card-wrap">
                     <div class="card">
-                        <a href="#results" aria-label="scroll to results">
-                            <div class="img-one card-img"></div>
-                        </a>
+                        <div class="img-one card-img"></div>
                         <p>cheese cake</p>
                     </div>
                     <div class="card">
-                        <a href="#results" aria-label="scroll to results">
-                            <div class="img-two card-img"></div>
-                        </a>
+                        <div class="img-two card-img"></div>
                         <p>doughnut</p>
                     </div>
                     <div class="card">
-                        <a href="#results" aria-label="scroll to results">
-                            <div class="img-three card-img"></div>
-                        </a>
+                        <div class="img-three card-img"></div>
                         <p>flapjacks</p>
                     </div>
                     <div class="card">
-                        <a href="#results" aria-label="scroll to results">
-                            <div class="img-four card-img"></div>
-                        </a>
+                        <div class="img-four card-img"></div>
                         <p>cupcake</p>
                     </div>
                 </div>
@@ -129,30 +121,22 @@
                     <h2>Main Course Recipes.</h2>
                     <p>Search thousands of main course meals.</p>
                 </div>
-                <button class="button" aria-label="search meals">Search Meals</button>
+                <button class="button searching-btns" aria-label="search meals">Search Meals</button>
                 <div class="card-wrap">
                     <div class="card">
-                        <a href="#results" aria-label="scroll to results">
-                            <div class="img-five card-img"></div>
-                        </a>
+                        <div class="img-five card-img"></div>
                         <p>fish</p>
                     </div>
                     <div class="card">
-                        <a href="#results" aria-label="scroll to results">
-                            <div class="img-six card-img"></div>
-                        </a>
+                        <div class="img-six card-img"></div>
                         <p>pork</p>
                     </div>
                     <div class="card">
-                        <a href="#results" aria-label="scroll to results">
-                            <div class="img-seven card-img"></div>
-                        </a>
+                        <div class="img-seven card-img"></div>
                         <p>beef</p>
                     </div>
                     <div class="card">
-                        <a href="#results" aria-label="scroll to results">
-                            <div class="img-eight card-img"></div>
-                        </a>
+                        <div class="img-eight card-img"></div>
                         <p>chicken</p>
                     </div>
                 </div>
@@ -165,30 +149,22 @@
                     <h2>Breakfast Recipes.</h2>
                     <p>Search thousands of awesome breakfasts.</p>
                 </div>
-                <button class="button" aria-label="search breakfast">Search Breakfasts</button>
+                <button class="button searching-btns" aria-label="search breakfast">Search Breakfasts</button>
                 <div class="card-wrap">
                     <div class="card">
-                        <a href="#results" aria-label="scroll to results">
-                            <div class="img-nine card-img"></div>
-                        </a>
+                        <div class="img-nine card-img"></div>
                         <p>omlette</p>
                     </div>
                     <div class="card">
-                        <a href="#results" aria-label="scroll to results">
-                            <div class="img-ten card-img"></div>
-                        </a>
+                        <div class="img-ten card-img"></div>
                         <p>waffles</p>
                     </div>
                     <div class="card">
-                        <a href="#results" aria-label="scroll to results">
-                            <div class="img-eleven card-img"></div>
-                        </a>
+                        <div class="img-eleven card-img"></div>
                         <p>pancakes</p>
                     </div>
                     <div class="card">
-                        <a href="#results" aria-label="scroll to results">
-                            <div class="img-twelve card-img"></div>
-                        </a>
+                        <div class="img-twelve card-img"></div>
                         <p>smoothie</p>
                     </div>
 
@@ -264,126 +240,7 @@
         </div>
     </section>
     <section id="results" class="results-section">
-        <div class="result-cards-wrap">
-            <!-- <div class="card">
-                <div class="cover"></div>
-                <div class="wrap">
-                    <div class="text">
-                        <h2>title</h2>
-                        <h4>sub title</h4>
-                    </div>
-                    <div class="btn-wrap">
-                            <div class="btn">
-                                <i class="fas fa-info"></i>
-                            </div>
-                        </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="cover"></div>
-                <div class="wrap">
-                    <div class="text">
-                        <h2>title</h2>
-                        <h4>sub title</h4>
-                    </div>
-                    <div class="btn-wrap">
-                        <div class="btn">
-                            <i class="fas fa-info"></i>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div class="card">
-                <div class="cover"></div>
-                <div class="wrap">
-                    <div class="text">
-                        <h2>title</h2>
-                        <h4>sub title</h4>
-                    </div>
-                    <div class="btn-wrap">
-                        <div class="btn">
-                            <i class="fas fa-info"></i>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div class="card">
-                <div class="cover"></div>
-                <div class="wrap">
-                    <div class="text">
-                        <h2>title</h2>
-                        <h4>sub title</h4>
-                    </div>
-                    <div class="btn-wrap">
-                        <div class="btn">
-                            <i class="fas fa-info"></i>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div class="card">
-                <div class="cover"></div>
-                <div class="wrap">
-                    <div class="text">
-                        <h2>title</h2>
-                        <h4>sub title</h4>
-                    </div>
-                    <div class="btn-wrap">
-                        <div class="btn">
-                            <i class="fas fa-info"></i>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div class="card">
-                <div class="cover"></div>
-                <div class="wrap">
-                    <div class="text">
-                        <h2>title</h2>
-                        <h4>sub title</h4>
-                    </div>
-                    <div class="btn-wrap">
-                        <div class="btn">
-                            <i class="fas fa-info"></i>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div class="card">
-                <div class="cover"></div>
-                <div class="wrap">
-                    <div class="text">
-                        <h2>title</h2>
-                        <h4>sub title</h4>
-                    </div>
-                    <div class="btn-wrap">
-                        <div class="btn">
-                            <i class="fas fa-info"></i>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div class="card">
-                <div class="cover"></div>
-                <div class="wrap">
-                    <div class="text">
-                        <h2>title</h2>
-                        <h4>sub title</h4>
-                    </div>
-                    <div class="btn-wrap">
-                        <div class="btn">
-                            <i class="fas fa-info"></i>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-        </div>
+        <div class="result-cards-wrap"></div>
     </section>
     <footer></footer>
 
